--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav .fa{
     display: none;
 }
 
-@media (max-width: 700px) {
+@media (-webkit-min-device-pixel-ratio:2) {
     .article1 h1 {
         font-size: 20px;
     }
@@ -162,12 +162,13 @@ nav .fa{
     box-shadow: 0 0 20px 0px teal;
 }
 
-@media (max-width: 700px) {
+@media (-webkit-min-device-pixel-ratio:2) {
   
     .row {
         flex-direction: column;
         align-items: center;
          justify-content: center;
+        display:block;
     }
     .cpics{
          flex-direction: column;
@@ -211,7 +212,7 @@ nav .fa{
     width: 100%
 }
 
-@media(max-width:700px) {
+@media(-webkit-min-device-pixel-ratio:2) {
     .campus-pics {
         flex-direction: column;
     }
