--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ nav img {
     transition: 1s;
 }
 
-nav .fa{
+nav .fas {
     display: none;
 }
 
@@ -112,9 +112,16 @@ nav .fa{
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
-       /*right: -200px;*/
+       right: -200px;
         z-index: 2;
+        transition:1s;
+    }
+    nav .fas {
+        display: block;
+        color: white;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
     }
    
 }
