--- a/style.css
+++ b/style.css
@@ -94,13 +94,16 @@ nav img {
     transition: 1s;
 }
 
-nav .fas {
+nav .fa {
     display: none;
 }
 
 @media (-webkit-min-device-pixel-ratio:2) {
-    .article1 h1 {
-        font-size: 20px;
+   .article1 {
+        font-size: 60px;
+    }
+    .article1 p {
+        font-size: 30px;
     }
     .nav-links ul li{
         display: block;
@@ -116,7 +119,7 @@ nav .fas {
         z-index: 2;
         transition:1s;
     }
-    nav .fas {
+    nav .fa {
         display: block;
         color: white;
         margin: 10px;
